# dev-bootstrap-open

./: .gitattributes  .gitignore  LICENSE  README.md  ci-test  run-ci-locally
am-common-lib/: LICENSE  MANIFEST.in  README.md  pyproject.toml
am-common-lib/am-common-lib-src/: .gitignore  .prettierignore  .prettierrc  .prettierrc.yaml  Dev-README.md  Pipfile  _combo_shell.py  _prettify.py  ci-test.sh  pyproject.toml
am-common-lib/am-common-lib-src/_devtools/: pyproject.toml
am-common-lib/am-common-lib-src/_devtools/src/_devtools/: __init__.py  _combo_shell.py  fflint.py  git_write_working_tree.py  prettify.py
am-common-lib/am-common-lib-src/_vdenv/: README.md  pyproject.toml
am-common-lib/am-common-lib-src/_vdenv/src/vdenv/: __init__.py  __main__.py  cli.py  mount_args.py
am-common-lib/am-common-lib-src/_vdenv/src/vdenv/resources/dind-sshd/: Dockerfile  mark_bash_init.py  start-sshd.sh
am-common-lib/am-common-lib-src/_vdenv/src/vdenv/resources/dind-uv/: Dockerfile
am-common-lib/am-common-lib-src/_vdenv/src/vdenv/resources/vdenv-ssh/: Dockerfile
am-common-lib/am-common-lib-src/am_common_lib/: __init__.py  resource_utils.py
am-common-lib/am-common-lib-src/am_common_lib/common/: __init__.py  immutable_dict.py  immutable_list.py  json_util.py
am-common-lib/am-common-lib-src/am_common_lib/docker_util/: __init__.py  docker_runner.py  util.py
am-common-lib/am-common-lib-src/devenv-test/: pytest.ini  test_install.py
am-common-lib/am-common-lib-src/devenv-test/resources/: get_aliases.sh  get_command_list.sh  get_shell_functions.sh  inspect_symlink.sh
am-common-lib/am-common-lib-src/docs/: CONTRIBUTING.md  Scratch.md  TODO.md
am-common-lib/am-common-lib-src/resources/: project_identity  run_ci_locally.py  test_install.py
am-common-lib/am-common-lib-src/test/: conftest.py  test_resource_utils.py
am-common-lib/am-common-lib-src/test/common/: test_immutable_dict.py  test_immutable_list.py  test_json_util.py  util.py
am-common-lib/am-common-lib-src/test/docker_util/: test_docker_images.py  test_docker_runner.py  test_util.py
am-common-lib/am-common-lib-src/test/resources/docker-images/dind-dev/: Dockerfile  image_info.json
am-common-lib/am-common-lib-src/test/resources/docker-images/python-dev/: Dockerfile  image_info.json
am-common-lib/am-common-lib-src/test/resources/docker-images/python-dev-docker-cli/: Dockerfile  entrypoint.sh  image_info.json
am-common-lib/am-common-lib-src/test/resources/docker-images/python-dev-loaded/: Dockerfile  image_info.json
am-common-lib/am-common-lib-src/test/resources/txt/: resource_exemplar
am-common-lib/am-common-lib-src/test/vdenv/: conftest.py  test_cli.py  test_mount_args.py
am-common-lib/am-common-lib-src/test/vdenv/images/: __init__.py  _support.py  conftest.py  test_base_fundamentals.py  test_dev_tools.py  test_nested_docker.py  test_python_versions.py  test_ssh.py
devenv/: Installation.md  install.py
devenv/scripts/: cli_echo.py  cli_echo_all.py  dedupe_path.py  git_toplevel.sh
devenv/shell_imports/: git_basic_shortcuts.sh
