[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "am-common-lib"
version = "0.0.1"
authors = [{name = "Ashok Gurumurthy", email = "no-email@example.com"}]
description = "Description of am-common-lib."
readme = "README.md"
classifiers = [
    "Development Status :: 1 - Planning",
    # "Development Status :: 2 - Pre-Alpha",
    # "Development Status :: 3 - Alpha",
    # "Development Status :: 4 - Beta",
    # "Development Status :: 5 - Production/Stable",
    # "Development Status :: 6 - Mature",
    # "Development Status :: 7 - Inactive",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[tool.setuptools.packages.find]
where = ["am-common-lib-src"]  # list of folders that contain the packages (["."] by default)
include = ["am_common_lib*", "resources*"]  # package names should match these glob patterns (["*"] by default)
