[project]
name = "am-common-lib-devtools"
version = "0.0.0"
description = "Dev-only tooling for am-common-lib (not distributed)"
requires-python = ">=3.13"

[project.scripts]
fflint = "_devtools.fflint:script_entry_point"
gwwt = "_devtools.git_write_working_tree:script_entry_point"
prettify = "_devtools.prettify:script_entry_point"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/_devtools"]
