[project]
name = "vdenv"
version = "0.0.1-alpha"
description = "Virtual development environment Docker images and CLI (pre-release)"
requires-python = ">=3.13"

[project.scripts]
vdenv-mgmt = "vdenv.cli:console_entry"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vdenv"]
